@@ -82,6 +82,7 @@ include
   gappinfo.override
   gapplaunchcontext.override
   gfile.override
+  gfileattribute.override
   gfileenumerator.override
   gfileinfo.override
   ginputstream.override
